OurCompiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DECLARE
    DO
    LBRACKET
    NUMBER
    RBRACKET
    STRING
    SYMBOLS
    TERMINALS

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> class_decl
Rule 3     program -> class_decl program
Rule 4     program -> empty
Rule 5     class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
Rule 6     class_decl -> CLASS ID LBRACE class_body_decl RBRACE
Rule 7     class_body_decl -> field_decl SEMICOLON
Rule 8     class_body_decl -> method_decl
Rule 9     class_body_decl -> constructor_decl
Rule 10    class_body_decl -> class_body_decl field_decl SEMICOLON
Rule 11    class_body_decl -> class_body_decl method_decl
Rule 12    class_body_decl -> class_body_decl constructor_decl
Rule 13    field_decl -> modifier var_decl
Rule 14    modifier -> PUBLIC STATIC
Rule 15    modifier -> PRIVATE STATIC
Rule 16    modifier -> PUBLIC
Rule 17    modifier -> PRIVATE
Rule 18    modifier -> STATIC
Rule 19    modifier -> empty
Rule 20    var_decl -> type variables
Rule 21    type -> INT
Rule 22    type -> FLOAT
Rule 23    type -> BOOLEAN
Rule 24    type -> VOID
Rule 25    type -> ID
Rule 26    variables -> variable
Rule 27    variables -> variables COMMA variable
Rule 28    variables -> empty
Rule 29    variable -> ID
Rule 30    method_decl -> modifier type ID LPAREN RPAREN block
Rule 31    method_decl -> modifier VOID ID LPAREN RPAREN block
Rule 32    method_decl -> modifier type ID LPAREN formals RPAREN block
Rule 33    method_decl -> modifier VOID ID LPAREN formals RPAREN block
Rule 34    method_decl -> modifier ID LPAREN RPAREN block
Rule 35    method_decl -> modifier ID LPAREN formals RPAREN block
Rule 36    constructor_decl -> modifier ID LPAREN RPAREN block
Rule 37    constructor_decl -> modifier ID LPAREN formals RPAREN block
Rule 38    formals -> formals COMMA formal_param
Rule 39    formals -> formal_param
Rule 40    formals -> empty
Rule 41    formal_param -> type variable
Rule 42    block -> LBRACE stmt RBRACE
Rule 43    stmt -> IF LPAREN expr RPAREN stmt
Rule 44    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 45    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 46    stmt -> FOR LPAREN stmt_expr SEMICOLON expr SEMICOLON stmt_expr RPAREN stmt
Rule 47    stmt -> RETURN SEMICOLON
Rule 48    stmt -> RETURN expr SEMICOLON
Rule 49    stmt -> stmt_expr SEMICOLON
Rule 50    stmt -> BREAK SEMICOLON
Rule 51    stmt -> CONTINUE SEMICOLON
Rule 52    stmt -> block
Rule 53    stmt -> var_decl SEMICOLON
Rule 54    stmt -> SEMICOLON
Rule 55    stmt -> empty
Rule 56    literal -> INTCONST
Rule 57    literal -> FLOATCONST
Rule 58    literal -> STRINGCONST
Rule 59    literal -> NULL
Rule 60    literal -> TRUE
Rule 61    literal -> FALSE
Rule 62    primary -> literal
Rule 63    primary -> THIS
Rule 64    primary -> SUPER
Rule 65    primary -> LPAREN expr RPAREN
Rule 66    primary -> NEW ID LPAREN arguments RPAREN
Rule 67    primary -> NEW ID LPAREN RPAREN
Rule 68    primary -> lhs
Rule 69    primary -> method_invocation
Rule 70    arguments -> expr
Rule 71    arguments -> arguments COMMA expr
Rule 72    arguments -> empty
Rule 73    lhs -> field_access
Rule 74    field_access -> primary PERIOD ID
Rule 75    field_access -> ID
Rule 76    method_invocation -> field_access LPAREN RPAREN
Rule 77    method_invocation -> field_access LPAREN arguments RPAREN
Rule 78    expr -> primary
Rule 79    expr -> assign
Rule 80    expr -> expr arith_op expr
Rule 81    expr -> expr bool_op expr
Rule 82    expr -> unary_op expr
Rule 83    assign -> lhs EQUALS expr
Rule 84    assign -> lhs PLUSPLUS
Rule 85    assign -> PLUSPLUS lhs
Rule 86    assign -> lhs MINUSMINUS
Rule 87    assign -> MINUSMINUS lhs
Rule 88    arith_op -> PLUS
Rule 89    arith_op -> MINUS
Rule 90    arith_op -> TIMES
Rule 91    arith_op -> DIVIDE
Rule 92    bool_op -> AND
Rule 93    bool_op -> OR
Rule 94    bool_op -> EQUALSCOMPARE
Rule 95    bool_op -> NOTEQUALS
Rule 96    bool_op -> LESSTHAN
Rule 97    bool_op -> GREATERTHAN
Rule 98    bool_op -> LESSTHANOREQ
Rule 99    bool_op -> GREATERTHANOREQ
Rule 100   unary_op -> PLUS
Rule 101   unary_op -> MINUS
Rule 102   unary_op -> NOT
Rule 103   stmt_expr -> assign
Rule 104   stmt_expr -> method_invocation

Terminals, with rules where they appear

AND                  : 92
BOOLEAN              : 23
BREAK                : 50
CLASS                : 5 6
COMMA                : 27 38 71
CONTINUE             : 51
DECLARE              : 
DIVIDE               : 91
DO                   : 
ELSE                 : 44
EQUALS               : 83
EQUALSCOMPARE        : 94
EXTENDS              : 5
FALSE                : 61
FLOAT                : 22
FLOATCONST           : 57
FOR                  : 46
GREATERTHAN          : 97
GREATERTHANOREQ      : 99
ID                   : 5 5 6 25 29 30 31 32 33 34 35 36 37 66 67 74 75
IF                   : 43 44
INT                  : 21
INTCONST             : 56
LBRACE               : 5 6 42
LBRACKET             : 
LESSTHAN             : 96
LESSTHANOREQ         : 98
LPAREN               : 30 31 32 33 34 35 36 37 43 44 45 46 65 66 67 76 77
MINUS                : 89 101
MINUSMINUS           : 86 87
NEW                  : 66 67
NOT                  : 102
NOTEQUALS            : 95
NULL                 : 59
NUMBER               : 
OR                   : 93
PERIOD               : 74
PLUS                 : 88 100
PLUSPLUS             : 84 85
PRIVATE              : 15 17
PUBLIC               : 14 16
RBRACE               : 5 6 42
RBRACKET             : 
RETURN               : 47 48
RPAREN               : 30 31 32 33 34 35 36 37 43 44 45 46 65 66 67 76 77
SEMICOLON            : 7 10 46 46 47 48 49 50 51 53 54
STATIC               : 14 15 18
STRING               : 
STRINGCONST          : 58
SUPER                : 64
SYMBOLS              : 
TERMINALS            : 
THIS                 : 63
TIMES                : 90
TRUE                 : 60
VOID                 : 24 31 33
WHILE                : 45
error                : 

Nonterminals, with rules where they appear

arguments            : 66 71 77
arith_op             : 80
assign               : 79 103
block                : 30 31 32 33 34 35 36 37 52
bool_op              : 81
class_body_decl      : 5 6 10 11 12
class_decl           : 2 3
constructor_decl     : 9 12
empty                : 4 19 28 40 55 72
expr                 : 43 44 45 46 48 65 70 71 80 80 81 81 82 83
field_access         : 73 76 77
field_decl           : 7 10
formal_param         : 38 39
formals              : 32 33 35 37 38
lhs                  : 68 83 84 85 86 87
literal              : 62
method_decl          : 8 11
method_invocation    : 69 104
modifier             : 13 30 31 32 33 34 35 36 37
primary              : 74 78
program              : 3 0
stmt                 : 42 43 44 44 45 46
stmt_expr            : 46 46 49
type                 : 20 30 32 41
unary_op             : 82
var_decl             : 13 53
variable             : 26 27 41
variables            : 20 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . class_decl
    (3) program -> . class_decl program
    (4) program -> . empty
    (5) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
    (6) class_decl -> . CLASS ID LBRACE class_body_decl RBRACE
    (1) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    class_decl                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (2) program -> class_decl .
    (3) program -> class_decl . program
    (2) program -> . class_decl
    (3) program -> . class_decl program
    (4) program -> . empty
    (5) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
    (6) class_decl -> . CLASS ID LBRACE class_body_decl RBRACE
    (1) empty -> .

  ! reduce/reduce conflict for $end resolved using rule 1 (empty -> .)
    CLASS           shift and go to state 4
    $end            reduce using rule 1 (empty -> .)

  ! $end            [ reduce using rule 2 (program -> class_decl .) ]

    class_decl                     shift and go to state 2
    program                        shift and go to state 5
    empty                          shift and go to state 3

state 3

    (4) program -> empty .

    $end            reduce using rule 4 (program -> empty .)


state 4

    (5) class_decl -> CLASS . ID EXTENDS ID LBRACE class_body_decl RBRACE
    (6) class_decl -> CLASS . ID LBRACE class_body_decl RBRACE

    ID              shift and go to state 6


state 5

    (3) program -> class_decl program .

    $end            reduce using rule 3 (program -> class_decl program .)


state 6

    (5) class_decl -> CLASS ID . EXTENDS ID LBRACE class_body_decl RBRACE
    (6) class_decl -> CLASS ID . LBRACE class_body_decl RBRACE

    EXTENDS         shift and go to state 7
    LBRACE          shift and go to state 8


state 7

    (5) class_decl -> CLASS ID EXTENDS . ID LBRACE class_body_decl RBRACE

    ID              shift and go to state 9


state 8

    (6) class_decl -> CLASS ID LBRACE . class_body_decl RBRACE
    (7) class_body_decl -> . field_decl SEMICOLON
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) class_body_decl -> . class_body_decl field_decl SEMICOLON
    (11) class_body_decl -> . class_body_decl method_decl
    (12) class_body_decl -> . class_body_decl constructor_decl
    (13) field_decl -> . modifier var_decl
    (30) method_decl -> . modifier type ID LPAREN RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (32) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (33) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (34) method_decl -> . modifier ID LPAREN RPAREN block
    (35) method_decl -> . modifier ID LPAREN formals RPAREN block
    (36) constructor_decl -> . modifier ID LPAREN RPAREN block
    (37) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (14) modifier -> . PUBLIC STATIC
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PUBLIC
    (17) modifier -> . PRIVATE
    (18) modifier -> . STATIC
    (19) modifier -> . empty
    (1) empty -> .

    PUBLIC          shift and go to state 15
    PRIVATE         shift and go to state 17
    STATIC          shift and go to state 16
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)

    class_body_decl                shift and go to state 10
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 9

    (5) class_decl -> CLASS ID EXTENDS ID . LBRACE class_body_decl RBRACE

    LBRACE          shift and go to state 19


state 10

    (6) class_decl -> CLASS ID LBRACE class_body_decl . RBRACE
    (10) class_body_decl -> class_body_decl . field_decl SEMICOLON
    (11) class_body_decl -> class_body_decl . method_decl
    (12) class_body_decl -> class_body_decl . constructor_decl
    (13) field_decl -> . modifier var_decl
    (30) method_decl -> . modifier type ID LPAREN RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (32) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (33) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (34) method_decl -> . modifier ID LPAREN RPAREN block
    (35) method_decl -> . modifier ID LPAREN formals RPAREN block
    (36) constructor_decl -> . modifier ID LPAREN RPAREN block
    (37) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (14) modifier -> . PUBLIC STATIC
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PUBLIC
    (17) modifier -> . PRIVATE
    (18) modifier -> . STATIC
    (19) modifier -> . empty
    (1) empty -> .

    RBRACE          shift and go to state 20
    PUBLIC          shift and go to state 15
    PRIVATE         shift and go to state 17
    STATIC          shift and go to state 16
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)

    field_decl                     shift and go to state 21
    method_decl                    shift and go to state 22
    constructor_decl               shift and go to state 23
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 11

    (7) class_body_decl -> field_decl . SEMICOLON

    SEMICOLON       shift and go to state 24


state 12

    (8) class_body_decl -> method_decl .

    RBRACE          reduce using rule 8 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 8 (class_body_decl -> method_decl .)
    VOID            reduce using rule 8 (class_body_decl -> method_decl .)
    ID              reduce using rule 8 (class_body_decl -> method_decl .)
    INT             reduce using rule 8 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 8 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl -> method_decl .)


state 13

    (9) class_body_decl -> constructor_decl .

    RBRACE          reduce using rule 9 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 9 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 9 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 9 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> constructor_decl .)


state 14

    (13) field_decl -> modifier . var_decl
    (30) method_decl -> modifier . type ID LPAREN RPAREN block
    (31) method_decl -> modifier . VOID ID LPAREN RPAREN block
    (32) method_decl -> modifier . type ID LPAREN formals RPAREN block
    (33) method_decl -> modifier . VOID ID LPAREN formals RPAREN block
    (34) method_decl -> modifier . ID LPAREN RPAREN block
    (35) method_decl -> modifier . ID LPAREN formals RPAREN block
    (36) constructor_decl -> modifier . ID LPAREN RPAREN block
    (37) constructor_decl -> modifier . ID LPAREN formals RPAREN block
    (20) var_decl -> . type variables
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . VOID
    (25) type -> . ID

    VOID            shift and go to state 28
    ID              shift and go to state 27
    INT             shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31

    var_decl                       shift and go to state 25
    type                           shift and go to state 26

state 15

    (14) modifier -> PUBLIC . STATIC
    (16) modifier -> PUBLIC .

    STATIC          shift and go to state 32
    VOID            reduce using rule 16 (modifier -> PUBLIC .)
    ID              reduce using rule 16 (modifier -> PUBLIC .)
    INT             reduce using rule 16 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 16 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 16 (modifier -> PUBLIC .)


state 16

    (18) modifier -> STATIC .

    VOID            reduce using rule 18 (modifier -> STATIC .)
    ID              reduce using rule 18 (modifier -> STATIC .)
    INT             reduce using rule 18 (modifier -> STATIC .)
    FLOAT           reduce using rule 18 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 18 (modifier -> STATIC .)


state 17

    (15) modifier -> PRIVATE . STATIC
    (17) modifier -> PRIVATE .

    STATIC          shift and go to state 33
    VOID            reduce using rule 17 (modifier -> PRIVATE .)
    ID              reduce using rule 17 (modifier -> PRIVATE .)
    INT             reduce using rule 17 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 17 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 17 (modifier -> PRIVATE .)


state 18

    (19) modifier -> empty .

    VOID            reduce using rule 19 (modifier -> empty .)
    ID              reduce using rule 19 (modifier -> empty .)
    INT             reduce using rule 19 (modifier -> empty .)
    FLOAT           reduce using rule 19 (modifier -> empty .)
    BOOLEAN         reduce using rule 19 (modifier -> empty .)


state 19

    (5) class_decl -> CLASS ID EXTENDS ID LBRACE . class_body_decl RBRACE
    (7) class_body_decl -> . field_decl SEMICOLON
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) class_body_decl -> . class_body_decl field_decl SEMICOLON
    (11) class_body_decl -> . class_body_decl method_decl
    (12) class_body_decl -> . class_body_decl constructor_decl
    (13) field_decl -> . modifier var_decl
    (30) method_decl -> . modifier type ID LPAREN RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (32) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (33) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (34) method_decl -> . modifier ID LPAREN RPAREN block
    (35) method_decl -> . modifier ID LPAREN formals RPAREN block
    (36) constructor_decl -> . modifier ID LPAREN RPAREN block
    (37) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (14) modifier -> . PUBLIC STATIC
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PUBLIC
    (17) modifier -> . PRIVATE
    (18) modifier -> . STATIC
    (19) modifier -> . empty
    (1) empty -> .

    PUBLIC          shift and go to state 15
    PRIVATE         shift and go to state 17
    STATIC          shift and go to state 16
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)

    class_body_decl                shift and go to state 34
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 20

    (6) class_decl -> CLASS ID LBRACE class_body_decl RBRACE .

    CLASS           reduce using rule 6 (class_decl -> CLASS ID LBRACE class_body_decl RBRACE .)
    $end            reduce using rule 6 (class_decl -> CLASS ID LBRACE class_body_decl RBRACE .)


state 21

    (10) class_body_decl -> class_body_decl field_decl . SEMICOLON

    SEMICOLON       shift and go to state 35


state 22

    (11) class_body_decl -> class_body_decl method_decl .

    RBRACE          reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)
    PUBLIC          reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)
    VOID            reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)
    ID              reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)
    INT             reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)
    FLOAT           reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl -> class_body_decl method_decl .)


state 23

    (12) class_body_decl -> class_body_decl constructor_decl .

    RBRACE          reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)
    PUBLIC          reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)
    PRIVATE         reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)
    STATIC          reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)
    VOID            reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)
    ID              reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)
    INT             reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)
    FLOAT           reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)
    BOOLEAN         reduce using rule 12 (class_body_decl -> class_body_decl constructor_decl .)


state 24

    (7) class_body_decl -> field_decl SEMICOLON .

    RBRACE          reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)
    PUBLIC          reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)
    PRIVATE         reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)
    STATIC          reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)
    VOID            reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)
    ID              reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)
    INT             reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)
    FLOAT           reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)
    BOOLEAN         reduce using rule 7 (class_body_decl -> field_decl SEMICOLON .)


state 25

    (13) field_decl -> modifier var_decl .

    SEMICOLON       reduce using rule 13 (field_decl -> modifier var_decl .)


state 26

    (30) method_decl -> modifier type . ID LPAREN RPAREN block
    (32) method_decl -> modifier type . ID LPAREN formals RPAREN block
    (20) var_decl -> type . variables
    (26) variables -> . variable
    (27) variables -> . variables COMMA variable
    (28) variables -> . empty
    (29) variable -> . ID
    (1) empty -> .

    ID              shift and go to state 36
    COMMA           reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)

    variables                      shift and go to state 37
    variable                       shift and go to state 38
    empty                          shift and go to state 39

state 27

    (34) method_decl -> modifier ID . LPAREN RPAREN block
    (35) method_decl -> modifier ID . LPAREN formals RPAREN block
    (36) constructor_decl -> modifier ID . LPAREN RPAREN block
    (37) constructor_decl -> modifier ID . LPAREN formals RPAREN block
    (25) type -> ID .

    LPAREN          shift and go to state 40
    ID              reduce using rule 25 (type -> ID .)
    COMMA           reduce using rule 25 (type -> ID .)
    SEMICOLON       reduce using rule 25 (type -> ID .)


state 28

    (31) method_decl -> modifier VOID . ID LPAREN RPAREN block
    (33) method_decl -> modifier VOID . ID LPAREN formals RPAREN block
    (24) type -> VOID .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 41
    COMMA           reduce using rule 24 (type -> VOID .)
    SEMICOLON       reduce using rule 24 (type -> VOID .)

  ! ID              [ reduce using rule 24 (type -> VOID .) ]


state 29

    (21) type -> INT .

    ID              reduce using rule 21 (type -> INT .)
    COMMA           reduce using rule 21 (type -> INT .)
    SEMICOLON       reduce using rule 21 (type -> INT .)


state 30

    (22) type -> FLOAT .

    ID              reduce using rule 22 (type -> FLOAT .)
    COMMA           reduce using rule 22 (type -> FLOAT .)
    SEMICOLON       reduce using rule 22 (type -> FLOAT .)


state 31

    (23) type -> BOOLEAN .

    ID              reduce using rule 23 (type -> BOOLEAN .)
    COMMA           reduce using rule 23 (type -> BOOLEAN .)
    SEMICOLON       reduce using rule 23 (type -> BOOLEAN .)


state 32

    (14) modifier -> PUBLIC STATIC .

    VOID            reduce using rule 14 (modifier -> PUBLIC STATIC .)
    ID              reduce using rule 14 (modifier -> PUBLIC STATIC .)
    INT             reduce using rule 14 (modifier -> PUBLIC STATIC .)
    FLOAT           reduce using rule 14 (modifier -> PUBLIC STATIC .)
    BOOLEAN         reduce using rule 14 (modifier -> PUBLIC STATIC .)


state 33

    (15) modifier -> PRIVATE STATIC .

    VOID            reduce using rule 15 (modifier -> PRIVATE STATIC .)
    ID              reduce using rule 15 (modifier -> PRIVATE STATIC .)
    INT             reduce using rule 15 (modifier -> PRIVATE STATIC .)
    FLOAT           reduce using rule 15 (modifier -> PRIVATE STATIC .)
    BOOLEAN         reduce using rule 15 (modifier -> PRIVATE STATIC .)


state 34

    (5) class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl . RBRACE
    (10) class_body_decl -> class_body_decl . field_decl SEMICOLON
    (11) class_body_decl -> class_body_decl . method_decl
    (12) class_body_decl -> class_body_decl . constructor_decl
    (13) field_decl -> . modifier var_decl
    (30) method_decl -> . modifier type ID LPAREN RPAREN block
    (31) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (32) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (33) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (34) method_decl -> . modifier ID LPAREN RPAREN block
    (35) method_decl -> . modifier ID LPAREN formals RPAREN block
    (36) constructor_decl -> . modifier ID LPAREN RPAREN block
    (37) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (14) modifier -> . PUBLIC STATIC
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PUBLIC
    (17) modifier -> . PRIVATE
    (18) modifier -> . STATIC
    (19) modifier -> . empty
    (1) empty -> .

    RBRACE          shift and go to state 42
    PUBLIC          shift and go to state 15
    PRIVATE         shift and go to state 17
    STATIC          shift and go to state 16
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)

    field_decl                     shift and go to state 21
    method_decl                    shift and go to state 22
    constructor_decl               shift and go to state 23
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 35

    (10) class_body_decl -> class_body_decl field_decl SEMICOLON .

    RBRACE          reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)
    PUBLIC          reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)
    PRIVATE         reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)
    STATIC          reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)
    VOID            reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)
    ID              reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)
    INT             reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)
    FLOAT           reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> class_body_decl field_decl SEMICOLON .)


state 36

    (30) method_decl -> modifier type ID . LPAREN RPAREN block
    (32) method_decl -> modifier type ID . LPAREN formals RPAREN block
    (29) variable -> ID .

    LPAREN          shift and go to state 43
    COMMA           reduce using rule 29 (variable -> ID .)
    SEMICOLON       reduce using rule 29 (variable -> ID .)


state 37

    (20) var_decl -> type variables .
    (27) variables -> variables . COMMA variable

    SEMICOLON       reduce using rule 20 (var_decl -> type variables .)
    COMMA           shift and go to state 44


state 38

    (26) variables -> variable .

    COMMA           reduce using rule 26 (variables -> variable .)
    SEMICOLON       reduce using rule 26 (variables -> variable .)


state 39

    (28) variables -> empty .

    COMMA           reduce using rule 28 (variables -> empty .)
    SEMICOLON       reduce using rule 28 (variables -> empty .)


state 40

    (34) method_decl -> modifier ID LPAREN . RPAREN block
    (35) method_decl -> modifier ID LPAREN . formals RPAREN block
    (36) constructor_decl -> modifier ID LPAREN . RPAREN block
    (37) constructor_decl -> modifier ID LPAREN . formals RPAREN block
    (38) formals -> . formals COMMA formal_param
    (39) formals -> . formal_param
    (40) formals -> . empty
    (41) formal_param -> . type variable
    (1) empty -> .
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . VOID
    (25) type -> . ID

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 46
    COMMA           reduce using rule 1 (empty -> .)
    INT             shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31
    VOID            shift and go to state 51
    ID              shift and go to state 45

  ! RPAREN          [ reduce using rule 1 (empty -> .) ]

    formals                        shift and go to state 47
    formal_param                   shift and go to state 48
    empty                          shift and go to state 49
    type                           shift and go to state 50

state 41

    (31) method_decl -> modifier VOID ID . LPAREN RPAREN block
    (33) method_decl -> modifier VOID ID . LPAREN formals RPAREN block

    LPAREN          shift and go to state 52


state 42

    (5) class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE .

    CLASS           reduce using rule 5 (class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE .)
    $end            reduce using rule 5 (class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE .)


state 43

    (30) method_decl -> modifier type ID LPAREN . RPAREN block
    (32) method_decl -> modifier type ID LPAREN . formals RPAREN block
    (38) formals -> . formals COMMA formal_param
    (39) formals -> . formal_param
    (40) formals -> . empty
    (41) formal_param -> . type variable
    (1) empty -> .
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . VOID
    (25) type -> . ID

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 53
    COMMA           reduce using rule 1 (empty -> .)
    INT             shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31
    VOID            shift and go to state 51
    ID              shift and go to state 45

  ! RPAREN          [ reduce using rule 1 (empty -> .) ]

    type                           shift and go to state 50
    formals                        shift and go to state 54
    formal_param                   shift and go to state 48
    empty                          shift and go to state 49

state 44

    (27) variables -> variables COMMA . variable
    (29) variable -> . ID

    ID              shift and go to state 56

    variable                       shift and go to state 55

state 45

    (25) type -> ID .

    ID              reduce using rule 25 (type -> ID .)


state 46

    (34) method_decl -> modifier ID LPAREN RPAREN . block
    (36) constructor_decl -> modifier ID LPAREN RPAREN . block
    (42) block -> . LBRACE stmt RBRACE

    LBRACE          shift and go to state 58

    block                          shift and go to state 57

state 47

    (35) method_decl -> modifier ID LPAREN formals . RPAREN block
    (37) constructor_decl -> modifier ID LPAREN formals . RPAREN block
    (38) formals -> formals . COMMA formal_param

    RPAREN          shift and go to state 59
    COMMA           shift and go to state 60


state 48

    (39) formals -> formal_param .

    RPAREN          reduce using rule 39 (formals -> formal_param .)
    COMMA           reduce using rule 39 (formals -> formal_param .)


state 49

    (40) formals -> empty .

    RPAREN          reduce using rule 40 (formals -> empty .)
    COMMA           reduce using rule 40 (formals -> empty .)


state 50

    (41) formal_param -> type . variable
    (29) variable -> . ID

    ID              shift and go to state 56

    variable                       shift and go to state 61

state 51

    (24) type -> VOID .

    ID              reduce using rule 24 (type -> VOID .)
    COMMA           reduce using rule 24 (type -> VOID .)
    SEMICOLON       reduce using rule 24 (type -> VOID .)


state 52
